--- a/Week4 Challenges/iCoder/contact.html
+++ b/Week4 Challenges/iCoder/contact.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,11 +9,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Hello, world!</title>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">iCoder</a>
+            <a class="navbar-brand" href="index.html">iCoder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -34,7 +32,7 @@
                             Topics
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#"">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -44,21 +42,20 @@
                 </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contactus.html">Contact Us</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-light me-2" type="submit">Search</button>
                 </form>
-
     </nav>
 
-    <form>
+    <div class="container mt-3">
+      <form>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-
             <p>Select your Query</p>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
@@ -87,27 +84,33 @@
                     <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
                     Yes
                 </li>
-                <br>
+              </ul>   
+              
+              <div class="mt-2">
                 <p>Tell us about yourself</p>
-                <div class="card">
-                    <div class="card-body">
-                    </div>
-                    <br>
-                    <p>Elaborate Your Concern</p>
-                    <div class="card">
-                        <div class="card-body">
-                        </div>
+                <textarea name="" id="" class="w-100"></textarea>
+              </div>
 
-            </ul>
+              <div class="mt-2">
+                <p>Elaborate Your Concern</p>
+                <textarea name="" id="" class="w-100"></textarea>
+              </div>
 
-            <br>
             <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <br>
+    </div>
 
+    <br>
     <footer> © 2021-2022 iCoder, Inc.
         <link rel="stylesheet" href="Privacy.html">
-        <link rel="stylesheet" href="Terms.html"> 
+        <link rel="stylesheet" href="Terms.html"> linl
     </footer>
-
 </html>
+
+
+
+
+
+
+
+
